# agent-1

./: AGENTS.md  README.md  USAGE.md  deploy.sh  pyproject.toml
agent_1/configs/video_encoder/: vjepa.yaml  vjepa_sweep.yaml
agent_1/data/: README.md  __init__.py  dataset.py  explore_dataset.ipynb  longplays.json
agent_1/models/utils/: modules.py
agent_1/models/vjepa/: mask.py  vjepa.py
agent_1/trainers/: vjepa_trainer.py
data/: README.md  explore_dataset.ipynb
scripts/: setup.sh
scripts/data/: convert_to_mp4.py  download_longplays.py  package_videos.py  preprocess_videos.py  rename_longplays.py  scrape_longplay_urls.py
scripts/training/: sweep_video_enc.py  train_video_enc.py
tests/: test_mask.py  test_module_shapes.py  test_vjepa.py
