[project]
name = "agent-1"
version = "0.1.0"
description = "A foundation model for a GameBoy use agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av",
    "beautifulsoup4",
    "boto3",
    "click",
    "einops",
    "httpx",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy",
    "playwright",
    "python-dotenv>=1.2.2",
    "torch",
    "tqdm",
    "webdataset",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
